update og image paths

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -7,10 +7,11 @@
   <meta name="theme-color" content="#1DB954" />
   <meta name="description" content="Web app for visualizing personalized Spotify data"
   />
-  <meta name="image" content="%PUBLIC_URL%/og.png" />
+  <meta name="image" content="https://ero-spotify-app-14b6ac45364e.herokuapp.com/og.png" />
   <meta property="og:title" content="Spotify Profile" />
   <meta property="og:description" content="Web app for visualizing personalized Spotify data" />
-  <meta property="og:image" content="%PUBLIC_URL%/og.png" />
+  <meta property="og:image" content="https://ero-spotify-app-14b6ac45364e.herokuapp.com/og.png" />
+  <meta property="twitter:image" content="https://ero-spotify-app-14b6ac45364e.herokuapp.com/og.png" />
 
   <link rel="apple-touch-icon" sizes="180x180" href="%PUBLIC_URL%/favicons/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="%PUBLIC_URL%/favicons/favicon-32x32.png">
